--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,11 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        - KINDLE_IP=${KINDLE_IP}
-        - KINDLE_PASSWORD=${KINDLE_PASSWORD}
+        - OUTPUT_FILE=${OUTPUT_FILE}
         - HOMEASSISTANT_LOGIN_USER=${HOMEASSISTANT_LOGIN_USER}
         - HOMEASSISTANT_LOGIN_PASS=${HOMEASSISTANT_LOGIN_PASS}
         - HOMEASSISTANT_URL=${HOMEASSISTANT_URL}
         - SLEEP=${SLEEP}
-        - READING_DURATION=${READING_DURATION}
     env_file:
     - .env
     restart: always
